0.9-beta to current

	Fixed ruler being updated when it shouldn't even be visible.  Thanks to
	filterfalse.

	Fixed incorrect existence check for files that end with forward slash on
	*nix.  Thanks to filterfalse.

0.8.2 to 0.9-beta

	Removed -Werror in tests from non-developer builds.

	Added tree view.  Thanks to filterfalse and Kornel.

	Added :tree command that converts current view into a tree.

	Added :dmap, :dnoremap and :dunmap commands to configure mappings in
	dialogs.  Thanks to Sassan Haradji (a.k.a. sassanh).

	Added "tree" parameter to :sync! that enables synchronization of tree
	view.  Thanks to filterfalse.

	Added :compare command to perform comparison in one or two directory
	trees.  Thanks to anonymous on SourceForge discussion forum and aleksejrs.

	Added CmpMismatch highlight group for highlighting mismatched files on
	side-by-side comparison.

	Added %Iu and %IU macros, which are %u and %U equivalents, but work better
	if external command is interactive and changes terminal state.

	Added v:servername variable, which provides access to server name of the
	running instance used by --remote feature.  Thanks to Marcin
	Kurczewski (a.k.a. rr-).

	Added dd key to :jobs menu, which requests cancellation of background
	operation.  Background :put, :copy, :move, :delete, size calculation with
	ga and gA as well as applications started in background can be cancelled
	this way.  Thanks to blurm.

	Added 'dotfiles' (local) option, which exposes dot files filter as an
	option.  Thanks to filterfalse.

	Added %q macro that redirects command output into quick view.  Thanks to
	svenn71.

	Added shell completion for bash and zsh.  Patches by filterfalse.

	Added e key to :jobs menu that displays list of errors issues by that
	jobs, if any.  h key goes back to :jobs menu.

	Added :copen command to restore last menu that supports navigation.
	Thanks to Sassan Haradji (a.k.a. sassanh).

	Added % key to menu mode, which navigates to [count]-th percent of the